--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "json-server": "^1.0.0-beta.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
