--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/joy": "^5.0.0-beta.36",
+    "date-fns": "^3.6.0",
     "json-server": "^1.0.0-beta.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
