--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.51.5",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
